--- a/frontend/vanilla-frontend/view.html
+++ b/frontend/vanilla-frontend/view.html
@@ -3,10 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="view.css">
 </head>
 <body>
 
+
+
+<div id="calender">
+    <div class="month">
+        <ul>
+            <li id="prev">&#10094;</li>
+            <li id="month"></li>
+            <li id="year"></li>
+            <li id="next">&#10095;</li>
+        </ul>
+    </div>
+
+
+
+    <ul id="days"></ul>
+    <ul id="user1"></ul>
+
+</div>
+
+
+
+
 <div id="values"></div>
+
+
 
 <script type="module" src="app.js"></script>
 </body>
