--- a/frontend/vanilla-frontend/view.html
+++ b/frontend/vanilla-frontend/view.html
@@ -20,10 +20,16 @@
     </div>
 
 
-
+<div id="content">
     <ul id="days"></ul>
     <ul id="user1"></ul>
     <ul id="user2"></ul>
+    <ul id="user3"></ul>
+    <ul id="user4"></ul>
+
+</div>
+
+
 </div>
 
 
