--- a/calenderView/view.html
+++ b/calenderView/view.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="view.css">
+    <title>Familienplaner</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/view.css">
+    <link rel="stylesheet" href="css/datepicker.min.css">
 </head>
 <body>
 
@@ -12,8 +14,7 @@
     <div class="month">
         <ul>
             <li id="prev">&#10094;</li>
-            <li id="month"></li>
-            <li id="year"></li>
+            <li id="month"><div id="year"></div></li>
             <li id="next">&#10095;</li>
         </ul>
     </div>
@@ -34,6 +35,7 @@
 
 <div id="values"></div>
 
-<script type="module" src="app.js"></script>
+<script type="module" src="js/app.js"></script>
+<script src="js/datepicker.min.js"></script>
 </body>
 </html>
