--- a/calenderView/view.html
+++ b/calenderView/view.html
@@ -9,6 +9,28 @@
 </head>
 <body>
 
+<div id="modal" class="modal hide">
+    <div class="panel">
+        <div class="panel__content">
+            <div><label for="termin">Termin</label>
+                <input type="text" id="termin" name="termin">
+            </div>
+            <div>
+                <label for="date">Datum</label>
+                <input type="date" id="date" name="date">
+            </div>
+            <div>
+                <label for="person">Eintrag für: </label>
+                <select name="person" id="person"></select>
+            </div>
+            <div>
+                <input type="button" value="Zurück" onclick="myFunction()">
+                <input type="button" value="Speichern" onclick="alert('Jetzt würde gespeichert werden :)'); myFunction()">
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div id="calender">
     <div class="month">
@@ -18,6 +40,7 @@
             <li id="next">&#10095;</li>
         </ul>
     </div>
+    <div> <input type="button" value="Neuer Eintrag" onclick="myFunction()"></div>
 
 
 <div id="content">
@@ -37,5 +60,12 @@
 
 <script type="module" src="js/app.js"></script>
 <script src="js/datepicker.min.js"></script>
+<script>
+    //Dieses Script ist nur um den Modal zu toggeln bis der code dann entgültig stimmt :)
+    function myFunction() {
+        let element = document.getElementById("modal");
+        element.classList.toggle("hide");
+    }
+</script>
 </body>
 </html>
