--- a/calenderView/view.html
+++ b/calenderView/view.html
@@ -43,6 +43,16 @@
     <div> <input type="button" value="Neuer Eintrag" onclick="myFunction()"></div>
 
 
+
+    <ul id="usernames">
+        <p id="placeholder">Datum</p>
+        <p id="username1">Roberto</p>
+        <p id="username2">Sebi</p>
+        <p id="username3">Fredi</p>
+        <p id="username4">Susi</p>
+    </ul>
+
+
 <div id="content">
     <ul id="days"></ul>
     <ul id="user1"></ul>
@@ -55,8 +65,11 @@
 
 </div>
 
-
 <div id="values"></div>
+
+<div class="footer">Copyright by Roberto Salerno & Sebastian Rüegg</div>
+
+
 
 <script type="module" src="js/app.js"></script>
 <script src="js/datepicker.min.js"></script>
