--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -5,7 +5,6 @@
     <title>Familienplaner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" href="css/datepicker.min.css">
 </head>
 <body>
 
@@ -24,7 +23,7 @@
                 <select name="person" id="person"></select>
             </div>
             <div>
-                <input type="button" id="back" value="Zurück"">
+                <input type="button" id="back" value="Zurück">
                 <input type="button" id="saveData" value="Speichern">
             </div>
         </div>
@@ -69,8 +68,7 @@
 <div class="footer">Copyright by Roberto Salerno & Sebastian Rüegg</div>
 
 
+<script type="module" src="app.js"></script>
 
-<script type="module" src="js/app.js"></script>
-<script src="js/datepicker.min.js"></script>
 </body>
 </html>
