--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Familienplaner</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
@@ -43,7 +43,7 @@
 
 
     <ul id="usernames">
-        <p id="placeholder">Family-Calendar</p>
+        <p id="placeholder">Datum</p>
         <p id="username1">Roberto</p>
         <p id="username2">Sebi</p>
         <p id="username3">Fredi</p>
