--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -43,7 +43,7 @@
 
 
     <ul id="usernames">
-        <p id="placeholder">Family-Calendar</p>
+        <p id="placeholder">Datum</p>
         <p id="username1">Roberto</p>
         <p id="username2">Sebi</p>
         <p id="username3">Fredi</p>
