--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -39,7 +39,13 @@
             <li id="next">&#10095;</li>
         </ul>
     </div>
-    <div> <input type="button" id="showModal"value="Neuer Eintrag"></div>
+    <div class="settings">
+        <input type="button" id="showModal"value="Neuer Eintrag">
+        <span>|</span>
+        <input type="text" id="newUser" name="newUser" placeholder="Zusätzlicher User">
+        <input type="button" id="saveUser" value="Hinzufügen">
+        <span>|</span>
+    </div>
 
 
     <ul id="usernames">
