--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -39,7 +39,7 @@
             <li id="next">&#10095;</li>
         </ul>
     </div>
-    <div> <input type="button" id="showModal"value="Neuer Eintrag"></div>
+    <div id="entryButton"> <input type="button" id="showModal"value="Neuer Eintrag"></div>
 
 
     <ul id="usernames">
