remove calender verschoben
remove calender ist nicht wirklich ein calender service gehört zum body

--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -34,8 +34,8 @@
 <div id="deleteModal" class="modal hide">
     <div class="panel">
         <div class="panelContent">
-            <p>USER LÖSCHEN</p>
-                <div><label for="selectUser">Nutzer: </label>
+            <p class="titel">USER LÖSCHEN</p>
+                <div><label for="selectUser">User: </label>
                 <select class="right" name="selectUser" id="selectUser"></select>
             </div>
             <div>
