Prüfung anzahl User und Eintrag für alle User Korrektur
Prüfung ob 5 User erfasst sind und verhidnern von weiteren Erfassungen.

Eintrag Termin so angepasst dass nur für vorhandene User ein Eintrag erstelt wird und nicht über die ganze Zeile.

--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -68,12 +68,12 @@
 
 
     <ul id="usernames">
-        <ul id="placeholder">Datum</ul>
-        <ul id="username1"></ul>
-        <ul id="username2"></ul>
-        <ul id="username3"></ul>
-        <ul id="username4"></ul>
-        <ul id="username5"></ul>
+        <li id="placeholder">Datum</li>
+        <li id="username1"></li>
+        <li id="username2"></li>
+        <li id="username3"></li>
+        <li id="username4"></li>
+        <li id="username5"></li>
     </ul>
 
 
