Umplatzieren der Buttons :)

--- a/calenderView/src/calendar/index.html
+++ b/calenderView/src/calendar/index.html
@@ -57,13 +57,12 @@
     </div>
 
     <div class="settings">
-        <input type="text" class="visible" id="newUser" name="newUser" placeholder="Zusätzlicher User">
-        <input type="button" class="visible" id="saveUser" value="Hinzufügen">
-        <span class="alert hide" id="alert">Maximale Anzahl User erreicht</span>
-        <span>|</span>
-        <input type="button" id="delMod" value="User entfernen">
-        <span>|</span>
         <input type="button" id="showModal"value="Neuer Termin">
+        <input type="button" id="delMod" class="right" value="User entfernen">
+        <span class="right">|</span>
+        <span class="right alert hide" id="alert">Maximale Anzahl User erreicht</span>
+        <input type="button" class="right" id="saveUser" value="Hinzufügen">
+        <input type="text" class="right" id="newUser" name="newUser" placeholder="Name neuer User">
     </div>
 
 
